# moncap-api

./: .dockerignore  .env.exemple  .gitignore  Dockerfile  MODELES_BACKEND.md  PROMPT_BACKEND_VIBE_CODING.md  README.md  alembic.ini  pyproject.toml  senegal_regions_departements_communes.csv
alembic/: env.py
alembic/versions/: 0001_init.py  0002_photo_recto_verso.py
app/: main.py
app/api/v1/: router.py
app/api/v1/routes/: adhesions.py  admin.py  auth.py  geo.py  health.py
app/cli/: create_admin.py  seed_geo.py
app/core/: auth.py  errors.py  middleware.py  security.py  settings.py
app/db/: session.py  types.py
app/models/: __init__.py  adhesion.py  auth_session.py  enums.py  geo.py  user.py
app/repositories/: adhesions.py  geo.py  sessions.py  users.py
app/schemas/: adhesions.py  admin.py  auth.py  geo.py
app/services/: adhesion_mail_templates.py  adhesions.py  auth.py  mail.py
app/storage/: local.py
tests/: conftest.py  test_adhesions.py  test_auth.py  test_rbac.py
